2010-11-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Fix typo: Mention rcsdiff ‘-B’ once only.

	* rcsdiff.c: Mention ‘-B’ once only in help text.
	Reported by Keith Thompson.

2010-11-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.94

2010-11-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Include extra \n in RCS file to fully emulate RCS 5.7.

	* rcsgen.c (putadmin): Output trailing newline.

2010-11-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Revert symbolic names ordering to be compatible with RCS 5.7.

	Translation oversight from 2010-04-28, "Replace
	‘struct assoc’ with ‘struct wlink’ + ‘struct symdef’".
	* rcsedit.c (addsymbol): For new symbolic
	names, add to front of list instead of end.

2010-11-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Maintain ‘GROK (deltas)’ in proper order.

	Omission from 2010-05-24, "Rewrite parsing".
	* b-grok.c (full): Reorder ‘repo->deltas’
	to reflect edits order, not index order.

2010-10-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Reuse backing store in ‘swapeditfiles’.

	* rcsedit.c (swapeditfiles): Allocate and
	do basic initialization for ‘es->fedit’ once only.

2010-10-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: For stdio operation, prep ‘finishedit’ properly.

	Regressions introduced 2010-04-17 and 2010-05-31, in
	"Overhaul read-only file handling" and "Mark verbatim
	region; reduce transitional tell/seek", respectively.
	* rcsedit.c (swapeditfiles): Set the fro ‘.end’ as well.
	(finishedit_slow): Prior to spewing, set start point.

2010-10-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: local_tm

	Omission from 2010-06-12, "Use ‘gmtime_r’, ‘localtime_r’".
	* maketime.c (local_tm): New func.
	(time2tm): Use ‘local_tm’.
	* maketime.h (struct maketimestuff): Add member ‘tzset_called_p’.
	(local_tm): New func decl.
	* rcstime.c (date2str): Use ‘local_tm’.

2010-10-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Cast less.
